create post layout

--- a/_posts/2017-02-25-sample.md
+++ b/_posts/2017-02-25-sample.md
@@ -1,6 +1,9 @@
 ---
-title: "Sample"
+layout: post
+title: Sample
 date: 2017-02-25 12:21:10 -0500
+excerpt: This is an excerpt.
 ---
+
 
 All the news.
