--- a/_posts/2017-02-25-sample2.md
+++ b/_posts/2017-02-25-sample2.md
@@ -1,6 +1,9 @@
 ---
-title: "Other Sample"
+layout: post
+title: Other Sample
 date: 2017-02-25 12:21:10 -0500
+excerpt: This is another excerpt.
 ---
+
 
 All the news.
