add previous and next buttons to post layout

--- a/_posts/2017-02-25-sample.md
+++ b/_posts/2017-02-25-sample.md
@@ -6,4 +6,6 @@ excerpt: This is an excerpt.
 ---
 
 
-All the news.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel lectus iaculis, faucibus massa et, sodales erat. Donec viverra risus lorem, at fermentum diam porttitor ac. Maecenas eget ante vel massa tincidunt dictum. Nunc congue hendrerit arcu, eget laoreet nibh ultrices sed. Curabitur pulvinar, odio suscipit dapibus consectetur, turpis nisl faucibus lacus, sit amet vestibulum sem risus non tellus. Fusce leo justo, laoreet eget eros ut, posuere porttitor mi. Quisque laoreet orci quis lacus consequat feugiat. Maecenas gravida eros nec pulvinar tincidunt. Vestibulum a diam interdum, finibus massa vitae, elementum urna. Cras convallis urna non magna pulvinar rutrum. Donec erat augue, iaculis nec semper sit amet, interdum a lectus. Sed quis leo ac turpis consectetur vestibulum.
+
+In et lacus auctor, gravida ex eget, vulputate nisi. Nunc ullamcorper mi eu erat porta semper. Mauris nec lacinia mauris. Integer finibus augue tellus, et sagittis lectus consequat id. Nunc pharetra est et velit dapibus placerat. Suspendisse est lorem, suscipit vitae maximus fringilla, vehicula vitae nisi. Nulla quam mi, convallis ut velit id, sodales interdum sapien. Proin accumsan nisl at lacus commodo accumsan. Proin gravida nunc vel ligula scelerisque ullamcorper.
